Changes in Version 0.5

    o lavaan changes: allow for inclusion of completely missing 
      cases and stop if missing = "listwise" or "pairwise"

Changes in Version 0.4

    o Update handling of missing data to conform to lavaan 0.5-21.

    o Throw error in case lavaan model with robust SEs is sent in.

Changes in Version 0.3

    o Added "Getting started" vignette.

    o Changes to conform to lavaan 0.5-20's handling of equality constraints.

    o Fixed issue where print methods sometimes wrapped over lines.

    o Fixed bug in llcont() for lavaan cases missing all data except
      one variable.

Changes in Version 0.2

    o Added argument "nested" to vuongtest(), allowing the user
      to specify whether or not candidate models are nested.  This
      impacts the limiting distribution of the Vuong LRT.

    o Added argument "adj" to vuongtest(), allowing the user
      to obtain test statistics with AIC or BIC adjustments.

    o print methods no longer display the full call of each model
      (just the first line).

    o BIC intervals added for objects of class hurdle, zeroinfl, 
      mlogit (were missing because they didn't have an nobs method).