@@ -1,14 +1,14 @@
 Package: nonnest2
 Title: Tests of Non-Nested Models
 Version: 0.5
-Date: 2017-02-15
-Author: Edgar Merkle and Dongjun You
+Date: 2017-10-02
+Author: Edgar Merkle, Dongjun You, and Lennart Schneider
 Maintainer: Edgar Merkle <merklee@missouri.edu>
 Description: Testing non-nested models via theory supplied by Vuong (1989) <DOI:10.2307/1912557>.
     Includes tests of model distinguishability and of model fit that can be applied
     to both nested and non-nested models. Also includes functionality to obtain
-    confidence intervals associated with AIC and BIC. This material is based on work
-    supported by the National Science Foundation under Grant Number SES-1061334.
+    confidence intervals associated with AIC and BIC. This material is partially based on
+    work supported by the National Science Foundation under Grant Number SES-1061334.
 Depends:
     R (>= 3.0.0)
 Imports:
