@@ -15,7 +15,7 @@ test_that("lavaan object", {
 
     expect_equal(sum(llcont(fit1)), as.numeric(logLik(fit1)))
     expect_equal(sum(llcont(fit2)), as.numeric(logLik(fit2)))
-    expect_equal(sum(llcont(fit3)), as.numeric(logLik(fit3)))
+    expect_equal(round(sum(llcont(fit3)) - as.numeric(logLik(fit3)), 8), 0L)
     expect_equal(sum(llcont(fit4)), as.numeric(logLik(fit4)))
     
     HS.model2 <- 'visual =~ x1 + 0.5*x2 + c(0.6, 0.8)*x3
@@ -23,7 +23,7 @@ test_that("lavaan object", {
                   speed   =~ x7 + x8 + x9'
     fit5 <- cfa(HS.model2, data=HolzingerSwineford1939, group="school")
     
-    expect_equal(sum(llcont(fit5)), as.numeric(logLik(fit5)))
+    expect_equal(round(sum(llcont(fit5)) -  as.numeric(logLik(fit5)), 8), 0L)
     
     HS.model3 <- 'visual =~ x1 + x2 + c(v3,v3)*x3
                   textual =~ x4 + x5 + x6
